changed services to open correctly on mobile and larger over 800px screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,12 @@ li > a {
     padding: 40% 0 40% 0
 }
 
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
 .centered {
     text-align: center;
 }
@@ -495,81 +501,87 @@ li > a {
 ====================================*/
 
 .services-container-page {
-    padding:100px 5% 200px 5%;
-    min-height: auto;
+    padding:200px 5% 200px 5%;
+    height: 1000px;
     background: rgb(217,200,117);
     background: radial-gradient(circle, rgba(217,200,117,1) 20%, rgba(253,253,249,1) 40%);
-    /* background: rgb(253,253,249);
-    background: radial-gradient(circle, rgba(253,253,249,1) 45%, rgba(217,200,117,1) 80%); */
+    background: rgb(253,253,249);
+    background: radial-gradient(circle, rgba(253,253,249,1) 45%, rgba(217,200,117,1) 80%);
+    
 }
 
 .services-welcome {
     text-align: center;
     font-size: 200%;
-
-
 }
 
 .services-left {
     float: left;
-    width: 33%;
+    width: 45%;
     padding-top: 5px;
-
 }
-
-.services-left-heading {
-    
-    float: right;
-    clear: both;
-    width: 60%;
-    margin-bottom: 20px;
-    line-height: 20px;    
-}
-
 .services-right {
     float: right;
-    width: 33%;
+    width: 45%;
     padding-top: 5px;
 }
-
-.services-right-heading {
-    
-    float: left;
-    clear: both;
-    width: 60%;
-    margin-bottom: 20px;
-    line-height: 20px;
-}
-
 .services-center {
-    width: 33%%;
+    width: 0;
     margin: 0 auto;
 }
 
-hr {
-    border-top: 1px solid #3a3a3a;
+
+
+.services-left-heading {
+    float: right;
+    clear: both;
     width: 100%;
-    margin: 5px 0;
+    margin-bottom: 20px;
+    line-height: 20px;    
 }
+.services-left-heading p {
+    text-align: left;
+}
+.services-left-heading h2 {
+    text-align: right;
+}
+
+.services-right-heading { 
+    float: left;
+    clear: both;
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 20px;
+}
+.services-right-heading p {
+    text-align: right;
+}
+.services-right-heading h2 {
+    text-align: left;
+}
+
+
 .services-center-container {
-    width: 300px;
+    height: 0;
+    /* width: 300px;
     height: 300px;
     padding: 30px;
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
     border-radius: 50%;
-    margin: 200px auto;
+    margin: 200px auto; */
 }
-
 .services-center-cover-bg {
-    background: url("../images/services-circle-bg.png");
+    height: 0;
+    /* background: url("../images/services-circle-bg.png");
     height: 100%;
     width: 100%;
     border-radius: 50%;
     background-position-x: center;
-    background-position-y: center;
+    background-position-y: center; */
 }
+
 
 
 
@@ -734,6 +746,81 @@ hr {
 
 @media screen and (min-width: 800px) {
  
+    .services-container-page {
+        padding:100px 5% 200px 5%;
+        background: rgb(217,200,117);
+        background: radial-gradient(circle, rgba(217,200,117,1) 20%, rgba(253,253,249,1) 40%);
+    }
+
+    .services-left {
+        float: left;
+        /* clear: both; */
+        width: 33%;
+        padding-top: 5px;
+    }
+    .services-right {
+        float: right;
+        /* clear: both; */
+        width: 33%;
+        padding-top: 5px;
+    }
+    .services-center {
+        width: 33%;
+        margin: 0 auto;
+    }
+    
+    
+    
+    .services-left-heading {
+        float: right;
+        clear: both;
+        width: 100%;
+        margin-bottom: 20px;
+        line-height: 20px;    
+    }
+    .services-left-heading p {
+        text-align: left;
+    }
+    .services-left-heading h2 {
+        text-align: right;
+    }
+    
+    .services-right-heading { 
+        float: left;
+        clear: both;
+        width: 100%;
+        margin-bottom: 20px;
+        line-height: 20px;
+    }
+    .services-right-heading p {
+        text-align: right;
+    }
+    .services-right-heading h2 {
+        text-align: left;
+    }
+    
+    
+    .services-center-container {
+        width: 300px;
+        height: 300px;
+        padding: 30px;
+        border-style: solid;
+        border-color: #ccc;
+        border-width: 1px;
+        border-radius: 50%;
+        margin: 200px auto;
+    }
+    .services-center-cover-bg {
+        background: url("../images/services-circle-bg.png");
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        background-position-x: center;
+        background-position-y: center;
+    }
+    
+
+
     .testimonials-container { 
         padding: 20% 15%;
     }
